rename postinstall to init, postbuild to initbuild

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "node patch.js && ./custom-modules/install-modified-logmonitor.sh && ./custom-modules/sophia-workaround.sh",
+    "init": "node patch.js && ./custom-modules/install-modified-logmonitor.sh && ./custom-modules/sophia-workaround.sh",
     "sophia": "./custom-modules/sophia-workaround.sh",
-    "postbuild": "node inject-metadata.js"
+    "initbuild": "node inject-metadata.js"
   },
   "private": true,
   "dependencies": {
