--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "init": "node patch.js && ./custom-modules/install-modified-logmonitor.sh && ./custom-modules/sophia-workaround.sh",
-    "sophia": "./custom-modules/sophia-workaround.sh",
+    "init": "node patch.js && /custom-modules/install-modified-logmonitor.sh && /custom-modules/sophia-workaround.sh",
+    "sophia": "/custom-modules/sophia-workaround.sh",
     "initbuild": "node inject-metadata.js"
   },
   "private": true,
