split scripts init in fex cmds

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "init": "node patch.js && ./custom-modules/install-modified-logmonitor.sh && ./custom-modules/sophia-workaround.sh",
+    "initpatch": "node patch.js",
+    "initlogmonitor": "./custom-modules/install-modified-logmonitor.sh",
+    "initsophia": "./custom-modules/sophia-workaround.sh",
+    "old": "node patch.js && ./custom-modules/install-modified-logmonitor.sh && ./custom-modules/sophia-workaround.sh",
     "sophia": "/custom-modules/sophia-workaround.sh",
     "initbuild": "node inject-metadata.js"
   },
