added insert-line as dependency

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "e2e": "ng e2e",
     "initpatch": "node patch.js",
     "initlogmonitor": ".\\custom-modules\\install-modified-logmonitor.sh",
-    "initsophia": "custom-modules/sophia-workaround.sh",
-    "old": "node patch.js && ./custom-modules/install-modified-logmonitor.sh && ./custom-modules/sophia-workaround.sh",
+    "initsophia": ".\\custom-modules\\sophia-workaround.sh",
+    "init": "node patch.js && ./custom-modules/install-modified-logmonitor.sh && ./custom-modules/sophia-workaround.sh",
     "sophia": "/custom-modules/sophia-workaround.sh",
     "initbuild": "node inject-metadata.js"
   },
