--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "initlogmonitor": ".\\custom-modules\\install-modified-logmonitor.sh",
     "initsophia": ".\\custom-modules\\sophia-workaround.sh",
     "init": "node patch.js && ./custom-modules/install-modified-logmonitor.sh && ./custom-modules/sophia-workaround.sh",
-    "sophia": "/custom-modules/sophia-workaround.sh",
+    "sophia": "./custom-modules/sophia-workaround.sh",
     "initbuild": "node inject-metadata.js"
   },
   "private": true,
