--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "npm run sophia && ng serve",
-    "build": "npm run sophia && ng build",
-    "buildprod": "npm run sophia && ng build --configuration=production && node inject-metadata.js",
+    "start": "yarn run sophia && ng serve",
+    "build": "yarn run sophia && ng build",
+    "buildprod": "yarn run sophia && ng build --configuration=production && node inject-metadata.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -13,7 +13,7 @@
     "initlogmonitor": ".\\custom-modules\\install-modified-logmonitor.sh",
     "initsophia": ".\\custom-modules\\sophia-workaround.sh",
     "init": "node patch.js && ./custom-modules/install-modified-logmonitor.sh && ./custom-modules/sophia-workaround.sh",
-    "sophia": "./custom-modules/sophia-workaround.sh",
+    "sophia": "custom-modules/sophia-workaround.sh",
     "initbuild": "node inject-metadata.js"
   },
   "private": true,
