--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/animations": "~8.1.1",
     "@angular/common": "~8.1.1",
     "@angular/compiler": "~8.1.1",
+    "@angular/compiler-cli": "^8.2.14",
     "@angular/core": "~8.1.1",
     "@angular/forms": "~8.1.1",
     "@angular/platform-browser": "~8.1.1",
@@ -44,7 +45,6 @@
   },
   "devDependencies": {
     "@angular/cli": "~8.1.1",
-    "@angular/compiler-cli": "~8.1.1",
     "@angular/language-service": "~8.1.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.8",
