--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/animations": "~8.1.1",
     "@angular/common": "~8.1.1",
     "@angular/compiler": "~8.1.1",
-    "@angular/compiler-cli": "^8.2.14",
+    "@angular/compiler-cli": "~8.1.1",
     "@angular/core": "~8.1.1",
     "@angular/forms": "~8.1.1",
     "@angular/platform-browser": "~8.1.1",
