--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
   "dependencies": {
     "@aeternity/aepp-sdk": "^5.0.0",
     "@angular-devkit/build-angular": "^0.803.21",
-    "@angular/animations": "~8.1.1",
-    "@angular/common": "~8.1.1",
-    "@angular/compiler": "~8.1.1",
-    "@angular/compiler-cli": "~8.1.1",
-    "@angular/core": "~8.1.1",
-    "@angular/forms": "~8.1.1",
-    "@angular/platform-browser": "~8.1.1",
-    "@angular/platform-browser-dynamic": "~8.1.1",
-    "@angular/router": "~8.1.1",
+    "@angular/animations": "68.1.1",
+    "@angular/common": "^8.1.1",
+    "@angular/compiler": "^8.1.1",
+    "@angular/compiler-cli": "^8.1.1",
+    "@angular/core": "^8.1.1",
+    "@angular/forms": "^8.1.1",
+    "@angular/platform-browser": "^8.1.1",
+    "@angular/platform-browser-dynamic": "^8.1.1",
+    "@angular/router": "^8.1.1",
     "bluebird": "^3.7.1",
     "buffer": "^5.4.3",
     "insert-line": "^1.1.0",
