--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "npm run sophia && ng serve",
+    "start": "custom-modules/sophia-workaround.sh && ng serve",
     "build": "npm run sophia && ng build",
     "buildprod": "yarn run sophia && ng build --configuration=production && node inject-metadata.js",
     "test": "ng test",
