--- a/package.json
+++ b/package.json
@@ -3,35 +3,33 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "custom-modules/sophia-workaround.sh && ng serve",
-    "build": "npm run sophia && ng build",
-    "buildprod": "yarn run sophia && ng build --configuration=production && node inject-metadata.js",
+    "start": "npm run sophia && ng serve",
+    "start-win": "npm run sophia-win && ng serve",
+    "build": "npm run sophia && ng build && node inject-metadata.js",
+    "buildprod": "npm run sophia && ng build --configuration=production && node inject-metadata.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "initpatch": "node patch.js",
-    "initlogmonitor": ".\\custom-modules\\install-modified-logmonitor.sh",
-    "initsophia": ".\\custom-modules\\sophia-workaround.sh",
     "init": "node patch.js && ./custom-modules/install-modified-logmonitor.sh && ./custom-modules/sophia-workaround.sh",
-    "sophia": ".\\custom-modules.\\sophia-workaround.sh",
-    "initbuild": "node inject-metadata.js"
+    "init-win": "node patch.js && .\\custom-modules\\install-modified-logmonitor.sh && .\\custom-modules\\sophia-workaround.sh",
+    "sophia": "./custom-modules/sophia-workaround.sh",
+    "sophia-win": ".\\custom-modules\\sophia-workaround.sh"
   },
   "private": true,
   "dependencies": {
     "@aeternity/aepp-sdk": "^5.0.0",
-    "@angular-devkit/build-angular": "^0.803.21",
-    "@angular/animations": "^8.1.1",
-    "@angular/common": "^8.1.1",
-    "@angular/compiler": "^8.1.1",
+    "@angular/animations": "~8.1.1",
+    "@angular/common": "~8.1.1",
+    "@angular/compiler": "~8.1.1",
     "@angular/compiler-cli": "^8.1.1",
-    "@angular/core": "^8.1.1",
-    "@angular/forms": "^8.1.1",
-    "@angular/platform-browser": "^8.1.1",
-    "@angular/platform-browser-dynamic": "^8.1.1",
-    "@angular/router": "^8.1.1",
+    "@angular/core": "~8.1.1",
+    "@angular/forms": "~8.1.1",
+    "@angular/platform-browser": "~8.1.1",
+    "@angular/platform-browser-dynamic": "~8.1.1",
+    "@angular/router": "~8.1.1",
     "bluebird": "^3.7.1",
-    "buffer": "^5.4.3",
     "insert-line": "^1.1.0",
+    "buffer": "^5.4.3",
     "ng-inline-svg": "^8.5.1",
     "ng2-semantic-ui": "^0.9.7",
     "ngx-clipboard": "^12.2.0",
@@ -41,16 +39,18 @@
     "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
     "uuid": "^3.3.2",
-    "zone.js": "~0.9.1",
-    "typescript": "3.4.3"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.801.1",
     "@angular/cli": "~8.1.1",
+    "@angular/compiler-cli": "~8.1.1",
     "@angular/language-service": "~8.1.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.2.0",
+    "insert-line": "^1.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -61,6 +61,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "3.4.3"
+    "typescript": "~3.4.3"
   }
 }
