--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "npm run sophia && ng serve",
     "start-win": "npm run sophia-win && ng serve",
     "build": "npm run sophia && ng build && node inject-metadata.js",
+    "build-win": "npm run sophia-win && ng build && node inject-metadata.js",
     "buildprod": "npm run sophia && ng build --configuration=production && node inject-metadata.js",
     "test": "ng test",
     "lint": "ng lint",
