--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
   "private": true,
   "dependencies": {
     "@aeternity/aepp-sdk": "^5.0.0",
-    "@angular/animations": "~8.1.1",
-    "@angular/common": "~8.1.1",
-    "@angular/compiler": "~8.1.1",
+    "@angular/animations": "^8.1.1",
+    "@angular/common": "^8.1.1",
+    "@angular/compiler": "^8.1.1",
     "@angular/compiler-cli": "^8.1.1",
-    "@angular/core": "~8.1.1",
-    "@angular/forms": "~8.1.1",
-    "@angular/platform-browser": "~8.1.1",
-    "@angular/platform-browser-dynamic": "~8.1.1",
-    "@angular/router": "~8.1.1",
+    "@angular/core": "^8.1.1",
+    "@angular/forms": "^8.1.1",
+    "@angular/platform-browser": "^8.1.1",
+    "@angular/platform-browser-dynamic": "^8.1.1",
+    "@angular/router": "^8.1.1",
     "bluebird": "^3.7.1",
     "insert-line": "^1.1.0",
     "buffer": "^5.4.3",
